:memo: Adicionando arquivo para normalizar os dados e mandar para o bucket silver

--- a/pipelines/dados_meteostat_distritos.ipynb
+++ b/pipelines/dados_meteostat_distritos.ipynb
@@ -2,6 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erro ao obter coordenadas para Ibirapuera: Non-successful status code 403\n"
+     ]
+    }
+   ],
+   "source": [
+    "from geopy.geocoders import Nominatim\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "# Lista dos distritos de São Paulo (exemplo)\n",
+    "distrito = \"Ibirapuera\"\n",
+    "\n",
+    "# Inicialize o geolocalizador\n",
+    "geolocator = Nominatim(user_agent=\"geoapiExercises\")\n",
+    "\n",
+    "# Função para obter latitude e longitude\n",
+    "def obter_lat_long(distrito):\n",
+    "    try:\n",
+    "        location = geolocator.geocode(distrito + \", São Paulo, Brasil\")\n",
+    "        if location:\n",
+    "            return location.latitude, location.longitude\n",
+    "        else:\n",
+    "            return None, None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao obter coordenadas para {distrito}: {e}\")\n",
+    "        return None, None\n",
+    "\n",
+    "# Crie uma lista para armazenar os resultados\n",
+    "resultados = []\n",
+    "\n",
+    "# Obtenha coordenadas para cada distrito\n",
+    "\n",
+    "lat, long = obter_lat_long(distrito)\n",
+    "resultados.append({\n",
+    "    \"Distrito\": distrito,\n",
+    "    \"Latitude\": lat,\n",
+    "    \"Longitude\": long})\n",
+    "\n",
+    "\n",
+    "# Crie um DataFrame para visualizar os resultados\n",
+    "df2 = pd.DataFrame(resultados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Distrito</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lubeca</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Distrito Latitude Longitude\n",
+       "0   Lubeca     None      None"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
