--- a/teste.ipynb
+++ b/teste.ipynb
@@ -754,6 +754,90 @@
     "\n",
     "locais_total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import StringIO\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 41\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Verificar se a solicitação foi bem-sucedida\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;66;03m# Extrair os dados necessários\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     detalhes \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     28\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTemperatura Atual (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtemp\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     29\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSensação Térmica (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeels_like\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     30\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTemperatura Mínima\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtemp_min\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTemperatura Máxima\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtemp_max\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     32\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUmidade\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhumidity\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     33\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPressão\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpressure\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     34\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCondições\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweather\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVelocidade do Vento\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwind\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspeed\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     36\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDireção do Vento\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwind\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeg\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     37\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrecipitação\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrain\u001b[39m\u001b[38;5;124m'\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1h\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mN/A\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNuvens\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclouds\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     39\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNascer do Sol\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msys\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msunrise\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     40\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPôr do Sol\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msys\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msunset\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m---> 41\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVisibilidade\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mweather_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mvisibility\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mall\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m,\n\u001b[0;32m     42\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNuvens\u001b[39m\u001b[38;5;124m'\u001b[39m: weather_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclouds\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     43\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDistrito\u001b[39m\u001b[38;5;124m'\u001b[39m: row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDistrito\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     44\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLatitude\u001b[39m\u001b[38;5;124m'\u001b[39m: latitude,\n\u001b[0;32m     45\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLongitude\u001b[39m\u001b[38;5;124m'\u001b[39m: longitude\n\u001b[0;32m     46\u001b[0m     }\n\u001b[0;32m     47\u001b[0m     lista\u001b[38;5;241m.\u001b[39mappend(detalhes)\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "df_coord = pd.read_csv('dados/distritos_lat_lon.csv')\n",
+    "\n",
+    "lista = []\n",
+    "\n",
+    "for index, row in df_coord.iterrows():\n",
+    "    # URL da API\n",
+    "    URL = \"http://api.openweathermap.org/data/2.5/weather\"\n",
+    "    latitude = row['Latitude']\n",
+    "    longitude = row['Longitude']\n",
+    "\n",
+    "    # Parâmetros da solicitação\n",
+    "    params = {\n",
+    "        'lat': latitude,\n",
+    "        'lon': longitude,\n",
+    "        'appid': 'eb27e58eb68d175624e79e4efed521eb',\n",
+    "        'units': 'metric',  # Use 'imperial' para Fahrenheit\n",
+    "        'lang': 'pt'  # Idioma dos detalhes (opcional)\n",
+    "    }\n",
+    "\n",
+    "    # Fazer a solicitação para a API\n",
+    "    response = requests.get(URL, params=params)\n",
+    "    weather_data = response.json()\n",
+    "\n",
+    "    # Verificar se a solicitação foi bem-sucedida\n",
+    "    if response.status_code == 200:\n",
+    "        # Extrair os dados necessários\n",
+    "        detalhes = {\n",
+    "            'Temperatura Atual (°C)': weather_data['main'].get('temp', 'N/A'),\n",
+    "            'Sensação Térmica (°C)': weather_data['main'].get('feels_like', 'N/A'),\n",
+    "            'Temperatura Mínima': weather_data['main'].get('temp_min', 'Não disponível'),\n",
+    "            'Temperatura Máxima': weather_data['main'].get('temp_max', 'Não disponível'),\n",
+    "            'Umidade': weather_data['main'].get('humidity', 'Não disponível'),\n",
+    "            'Pressão': weather_data['main'].get('pressure', 'Não disponível'),\n",
+    "            'Condições': weather_data['weather'][0].get('description', 'Não disponível'),\n",
+    "            'Velocidade do Vento': weather_data['wind'].get('speed', 'Não disponível'),\n",
+    "            'Direção do Vento': weather_data['wind'].get('deg', 'Não disponível'),\n",
+    "            'Precipitação': weather_data.get('rain', {}).get('1h', 'N/A'),\n",
+    "            'Nuvens': weather_data['clouds'].get('all', 'N/A'),\n",
+    "            'Nascer do Sol': weather_data['sys'].get('sunrise', 0),\n",
+    "            'Pôr do Sol': weather_data['sys'].get('sunset', 0),\n",
+    "            'Visibilidade': weather_data.get('visibility', 'N/A'),\n",
+    "            'Distrito': row['Distrito'],\n",
+    "            'Latitude': latitude,\n",
+    "            'Longitude': longitude\n",
+    "        }\n",
+    "        lista.append(detalhes)\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Erro ao obter dados: {weather_data.get('message', 'Desconhecido')}\")\n",
+    "\n",
+    "# Criar um DataFrame com os dados\n",
+    "df = pd.DataFrame(lista)"
+   ]
   }
  ],
  "metadata": {
